--- a/ipynb/01_CourseInfo.ipynb
+++ b/ipynb/01_CourseInfo.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TECNICHE INFORMATICHE PER LA FISICA\n",
-    "====================================\n",
+    "<H1 style=\"font-size:50px\">TECNICHE INFORMATICHE PER LA FISICA</H1>\n",
     "\n",
-    "Ezio Maina\n",
-    "-----------"
+    "<H1 style=\"font-size:30px\">Ezio Maina</H1>\n"
    ]
   },
   {
@@ -24,6 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduzione\n",
     "- Assumerò che non sappiate nulla di programmazione e che abbiate solo una vaga idea di cosa sia un programma e di cosa faccia un programmatore\n",
     "- Useremo python 3\n",
     "- Useremo l'interfaccia Jupyter Lab e i notebook Jupyter\n",
@@ -62,8 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Organizzazione del corso\n",
-    "-------------------------\n",
+    "## Organizzazione del corso\n",
     "\n",
     "Il corso adotta la metodologia dell'**INSEGNAMENTO CAPOVOLTO** (https://it.wikipedia.org/wiki/Insegnamento_capovolto)\n",
     "o **FLIPPED CLASSROOM** (https://en.wikipedia.org/wiki/Flipped_classroom)<BR>\n",
@@ -84,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Valutazione\n",
+    "##Valutazione\n",
     "-----------\n",
     "\n",
     "- Il corso non ha voto finale. Approvato/Non approvato\n",
