--- a/ipynb/02_Introduzione_a_Python.ipynb
+++ b/ipynb/02_Introduzione_a_Python.ipynb
@@ -21,8 +21,7 @@
     "\n",
     "<hr>\n",
     "\n",
-    "2.1 Jupyter Lab/Notebook\n",
-    "---------------------\n",
+    "## Jupyter Lab/Notebook\n",
     "    \n",
     "Per eseguire comandi di Python, noi useremo una interfaccia potente, il Jupyter Lab che permette, tra l'altro, di operare su uno o pi&ugrave; Jupyter Notebook. Ciascun notebook è diviso in celle. I due tipi di celle che ci interessano sono quelle di tipo `Code` dove si possono scrivere ed eseguire comandi, e quelle di tipo `Markdown` che contengono testo.\n",
     "Mescolare celle eseguibili e celle di testo in cui spiegare il procedimento che si sta\n",
@@ -135,8 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2 Operazioni elementari\n",
-    "-------------------\n",
+    "## Operazioni elementari\n",
     "\n",
     "Le operazioni elementari come l'addizione (`+`), sottrazione (`-`), moltiplicazione (`*`), divisione (`/`) e esponenziazione (`**`) funzionano come ci si aspetta. \n",
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff0000; margin:20px 0px 10px 10px\">\n",
@@ -259,10 +257,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3 Regole di precedenza\n",
-    "--------------------\n",
+    "## Regole di precedenza\n",
+    "\n",
     "`a < b` significa che `a` viene eseguita prima di `b`:<br>\n",
-    "### &nbsp; &nbsp; &nbsp; &nbsp; Funzioni < parentesi < esponenziazione < moltiplicazione, divisione < addizione, sottrazione"
+    "<div style=\"font-size:24px\"> &nbsp; &nbsp; &nbsp; &nbsp; Funzioni < parentesi < esponenziazione < moltiplicazione, divisione < addizione, sottrazione</div>"
    ]
   },
   {
@@ -334,8 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.4 Funzioni intrinseche\n",
-    "--------------------\n",
+    "## Funzioni intrinseche\n",
     "\n",
     "Sono funzioni sempre disponibili in Python. Per esempio, le funzioni che trasformano una variabile da un tipo ad un altro (Si veda [03_Tipi_di_Dati.ipynb](03_Tipi_di_Dati.ipynb)) oppure `max`, `min`,`abs`. La lista completa delle funzioni intrinseche si trova in [Built-in functions](https://docs.python.org/3/library/functions.html).<BR>\n",
     "    Qualche esempio:"
@@ -438,8 +435,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "2.5 Funzioni Matematiche \n",
-    "--------------------------\n",
+    "## Funzioni Matematiche \n",
+    "\n",
     "La quasi totalità delle funzioni in Python sono contenute in librerie dette **moduli** che devono essere **importati** per poter utilizzare le funzioni al loro interno. Vanno importate solo le librerie che vengono utilizzate.\n",
     "Le funzioni matematiche più comuni e molte altre si trovano in un **modulo** chiamato `math`. Per esempio le funzioni trigonometriche come seno (`sin`), coseno (`cos`), tangente (`tan`) con le loro inverse `asin`, `acos`, `atan`; la radice quadrata (`sqrt`), la funzione esponenziale (`exp`) e il logaritmo (`log`) . Prima di utilizzare le funzioni contenute in `math`, dobbiamo *importare* il modulo. La chiamata ad una funzione contenuta in un modulo ha la sintassi:`nome_modulo.nome_funzione(argomento)`:"
    ]
@@ -604,8 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.6 Variabili\n",
-    "----------\n",
+    "## Variabili\n",
     "\n",
     "Una variabile &egrave; un'area di memoria associata a un nome simbolico (identificatore) che contiene un oggetto, per esempio un singolo valore oppure una collezione di valori.\n",
     "In pratica, una variabile rappresenta un'entit&agrave; dati che pu&ograve; cambiare nel corso dell'esecuzione di un programma. Una variabile viene creata attraverso una assegnazione. \n",
@@ -818,8 +814,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.7 Equazioni Impossibili\n",
-    "-------------------------\n",
+    "## Equazioni Impossibili ovvero assegnazione vs uguaglianza\n",
     "\n",
     "In un programma troviamo spesso espressioni come"
    ]
@@ -968,7 +963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.8 Le funzioni\n",
+    "## Le funzioni\n",
     "\n",
     "Le funzioni ci permettono di raggruppare una sequenza di comandi in un blocco logico. Comunichiamo con una funzione attraverso una interfaccia ben definita, fornendo dei parametri, e ricevendo di ritorno delle informazioni. Generalmente non sappiamo esattamente come una funzione ottiene il valore che ci restituisce, conosciamo solo l'interfaccia.\n",
     "\n",
@@ -1007,8 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.9 Come definire una nostra funzione\n",
-    "-------------------------------------\n",
+    "## Come definire una nostra funzione\n",
     "\n",
     "Il format generico della definizione di una funzione &egrave;:\n",
     "\n",
@@ -1355,7 +1349,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "##### Informazioni ulteriori\n",
     "\n",
@@ -1367,8 +1363,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.10 Un errore comune: *stampare* un valore verso *ritornare* un valore\n",
-    "-----------------------------------------\n",
+    "## Come usare una funzione "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definisco la funzione:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube(var):\n",
+    "    res = var**3           # Calcolo il risultato valuto\n",
+    "    return res             # Restituisco il risultato"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definisco l'input: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lato = 3.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chiamo la funzione passando un valore in input e assegno il risultato a una variabile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume = cube(lato)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se necessario mi faccio mostrare il risultato:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(volume)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se necessario utilizzo il risultato in ulteriori operazioni:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume_cilindro = 27.2\n",
+    "volume_totale = volume + volume_cilindro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Un errore comune: *stampare* un valore verso *ritornare* un valore\n",
     "\n",
     "&Egrave; un errore comune, quando si inizia, confondere *stampare* un valore con *ritornare* un valore. Nell'esempio seguente &egrave; difficile capire se la funzione `math.sin` ritorna un valore oppure lo stampa:"
    ]
@@ -1553,97 +1638,6 @@
     "<div style= 'padding:20px 20px 0px 150px;'>\n",
     "    <img src=\"../Humour/ProgrammerMood.jpg\" width=\"500\" align=\"center\"/><BR>\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2.11 Come usare una funzione \n",
-    "-----------------------------------------\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Definisco la funzione:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cube(var):\n",
-    "    res = var**3           # Calcolo il risultato valuto\n",
-    "    return res             # Restituisco il risultato"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Definisco l'input: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lato = 3.2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Chiamo la funzione passando un valore in input e assegno il risultato a una variabile:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "volume = cube(lato)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se necessario mi faccio mostrare il risultato:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(volume)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se necessario utilizzo il risultato in ulteriori operazioni:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "volume_cilindro = 27.2\n",
-    "volume_totale = volume + volume_cilindro"
    ]
   }
  ],
