--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -55,8 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.1 Dati numerici\n",
-    "---------\n",
+    "## 3.1 Dati numerici\n",
     "\n",
     "I tipi numerici built-in sono i numeri interi (integers, int), che possono essere anche rappresentati in base esadecimale, ottale o binaria, i numeri reali (floating point, float) e quelli complessi."
    ]
@@ -358,7 +357,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 3.2 Valori logici o variabili di Boole.\n",
+    "## Valori logici o variabili di Boole.\n",
     "\n",
     "In un programma si ha spesso la necessità di valutare se una certa situazione si verifica oppure no. Per esempio, verificare se il discriminante di una equazione algebrica di secondo grado &egrave; positivo, oppure se un cliente &egrave; presente nel nostro indirizzario.\n",
     "In queste situazioni si utilizzano delle variabili, dette booleane o di Boole, che possono assumere solo due valori, vero oppure falso. Python ha due oggetti built-in che hanno i valori logici `True` e `False`:"
@@ -406,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Confronti, uguaglianza e identità.\n",
+    "## Confronti, uguaglianza e identità.\n",
     "\n",
     "Gli operatori `==`, `!=`, `>`,`>=`, `<`, `<=` servono a confrontare i *valori* di due oggetti. Restituiscono `True` oppure `False`.\n",
     "Per esempio:"
@@ -581,8 +580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.4 Sequenze\n",
-    "-----------\n",
+    "## Sequenze\n",
     "\n",
     "Stringhe, liste e ntuple (tuples) sono *sequenze*. Possono essere *indicizzate* e *sezionate* (*sliced*) nello stesso modo.\n",
     "\n",
@@ -1044,7 +1042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.2 Liste\n",
+    "### Liste\n",
     "\n",
     "Una liste è una sequenza mutabile di oggetti. Gli  oggetti possono essere di qualsiasi tipo, per esempio numeri interi:"
    ]
@@ -1624,7 +1622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.3 Ntuples\n",
+    "### Ntuples\n",
     "\n",
     "Una *nntupla* (*tuple*) è una sequenza (immutable) di oggetti. Le ntuple si comportano in modo molto simile alle liste con l'eccezione che non possono essere modificate.\n",
     "\n",
@@ -1916,7 +1914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.4 Conversioni fra tipi\n",
+    "### Conversioni fra tipi\n",
     "\n",
     "La funzione `type` mostra il tipo di un oggetto. È possibile convertire un oggetto in uno di tipo diverso."
    ]
@@ -2119,7 +2117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.5 Indici in sequenze\n",
+    "### Indici in sequenze\n",
     "\n",
     "Abbiamo già accennato più volte all'uso degli indici in sequenze introducendo le varie strutture dati. Questa sezione cerca di sistematizzare l'argomento.<BR>&nbsp;<BR>\n",
     "I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro indice fra parentesi quadre(`[` e `]`). Notate che Python (come in C ma diversamente dal Fortran e da Matlab) conta gli indici partendo da zero!"
@@ -2458,7 +2456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Dizionari\n",
+    "## Dizionari\n",
     "\n",
     "I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi *unordered* di coppie *key-value*. Le keywords devono essere oggetti immutabili mentre i dizionari sono oggetti mutabili.\n",
     "\n",
@@ -2877,7 +2875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6 Locazione in memoria e copia di oggetti\n",
+    "## Locazione in memoria e copia di oggetti\n",
     "\n",
     "Abbiamo visto che la funzione `id()` restituisce l'indirizzo in memoria di un oggetto, e che possiamo utilizzare questa funzione per verificare se due oggeti sono identici, cioè se si riferiscono alla stessa locazione di memoria."
    ]
@@ -3091,7 +3089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.7.1 Mutabilità, Immutabilità e metodi che modificano oggetti immutabili"
+    "### Mutabilità, Immutabilità e metodi che modificano oggetti immutabili"
    ]
   },
   {
