--- a/ipynb/04_control-flow.ipynb
+++ b/ipynb/04_control-flow.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 If-then-else\n",
+    "## If-then-else\n",
     "\n",
     "La costruzione `if` permette di eseguire del codice in modo condizionato. Dopo la parola chiave `if` deve essere presente una *condizione* seguita da due punti (`:`). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (`True`). Il blocco di comandi termina quando finisce l'indentazione."
    ]
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 For loop\n",
+    "## For loop\n",
     "\n",
     "I `for`-loop permettono di iterare su una sequenza (per esempio una stringa o una lista). Ecco un esempio:"
    ]
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2.1 Loop concatenati"
+    "### Loop concatenati"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Informazioni ulteriori\n",
+    "##### Informazioni ulteriori\n",
     "\n",
     "-   Introduzione ai for-loops in [Python tutorial, section 4.2](http://docs.python.org/tutorial/controlflow.html#for-statements)\n",
     "\n"
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 While loop\n",
+    "## While loop\n",
     "\n",
     "\n",
     "La parola chiave `while` permette di ripetere una operazione mentre una condizione è vera. Dopo la parola chiave `while` deve essere presente una condizione seguita da due punti (:). Nella riga successiva inizia un nuovo blocco di comandi (che quindi deve essere indentato!) che viene eseguito se la condizione è True.<BR>\n",
@@ -498,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.4 Come filtrare una lista/ntupla/dizionario con `if`\n",
+    "## Come filtrare una lista/ntupla/dizionario con `if`\n",
     "\n",
     "Spesso è necessario estrarre da una lista gli elementi che soddisfano una certa condizione. Lo si può ottenere con un `if` *all'interno* della definizione della lista:"
    ]
@@ -678,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.5 Interrompere un loop"
+    "## Interrompere un loop"
    ]
   },
   {
