--- a/ipynb/06_funzioni_moduli.ipynb
+++ b/ipynb/06_funzioni_moduli.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "<hr>\n",
     "\n",
-    "## 6.1 Introduzione\n",
+    "## Introduzione\n",
     "\n",
     "Le funzioni ci permettono di raggruppare una sequenza di comandi in un blocco logico. La funzione è identificata da un nome in modo da poter essere \"chiamata\". Comunichiamo con una funzione attraverso una interfaccia ben definita, fornendo dei parametri, e ricevendo di ritorno delle informazioni. Generalmente non sappiamo esattamente come una funzione ottiene il valore che ci restituisce, conosciamo solo l'interfaccia.\n",
     "\n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2 Keywords, valori di default e parametri opzionali nella definizione di funzioni\n",
+    "## Keywords, valori di default e parametri opzionali nella definizione di funzioni\n",
     "\n",
     "Python permette di definire valori di *default* per gli argomenti di una funzione.\n",
     "Questi argomenti vengono definiti argomenti con keyword o con nome.\n",
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3 Funzioni con un numero variabile di argomenti: `*args` e `**kwargs`"
+    "## Funzioni con un numero variabile di argomenti: `*args` e `**kwargs`"
    ]
   },
   {
@@ -287,7 +287,8 @@
    "source": [
     "print(en[0])\n",
     "print(en[1:4])\n",
-    "print(en[-1])"
+    "print(en[-1])\n",
+    "print(en[len(en)-1])"
    ]
   },
   {
@@ -312,12 +313,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### L'operatore di impacchettamento/spacchettamento `*` per sequenze\n",
+    "### L'operatore di impacchettamento/spacchettamento `*` per sequenze\n",
     "\n",
     "L'operatore `*` ci permette di essere flessibili, definendo un oggetto con un numero variabile di elementi.<BR>\n",
     "Nell'esempio seguente `en_1` e `en_2` catturano i primi due elementi della lista. `en_last` cattura l'ultimo elemento.\n",
     "Tutti gli altri elementi, qualunque sia il loro numero, zero compreso,, vengono catturati\n",
-    "da `*en2_rest`. La variabile `en2_rest` (senza `*`) contiene la lista degli elementi dall'indice 2 a len(en)-1."
+    "da `*en2_rest`. La variabile `en2_rest` (senza `*`) contiene la lista degli elementi dall'indice 2 a len(en)-2."
    ]
   },
   {
@@ -522,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### L'operatore di impacchettamento/spacchettamento, `**`, per argomenti con nome e dizionari"
+    "### L'operatore di impacchettamento/spacchettamento, `**`, per argomenti con nome e dizionari"
    ]
   },
   {
@@ -702,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Caso più generale: funzioni che hanno sia `*args` che `**kwargs` come argomenti\n",
+    "### Caso più generale: funzioni che hanno sia `*args` che `**kwargs` come argomenti\n",
     "Nella chiamata a una funzione tutti gli argomenti posizionali devono precedere gli argomenti con nome: `*args,**kwargs` e NON `**kwargs,*args`"
    ]
   },
@@ -738,7 +739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4 Cosa succeede quando si passano argomenti a una funzione in Python\n",
+    "## Cosa succeede quando si passano argomenti a una funzione in Python\n",
     "\n",
     "In Python, gli oggetti sono passati per referenza (tipo pointer) all'oggetto. A seconda di come la referenza viene usate nella funzione e del tipo di oggetto che viene referenziato, questo può significare che qualsiasi modifica, all'interno della funzione, dell'oggetto passato si riflette immediatamente all'esterno.\n",
     "\n",
@@ -779,20 +780,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In main: s = Hello\n",
-      "in double_the_list: l = Hello\n",
-      "in double_the_list: changed l to l = HelloHello\n",
-      "In main: s = Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def double_the_list(l):\n",
     "    print(f\"in double_the_list: l = {l}\")\n",
@@ -870,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5 Passare funzioni come argomenti a funzioni\n",
+    "## Passare funzioni come argomenti a funzioni\n",
     "\n",
     "Le funzioni sono oggetti in Python, quindi è possibile passare funzioni come argomenti ad altre funzioni. "
    ]
@@ -913,7 +903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.6 Moduli\n",
+    "## Moduli\n",
     "\n",
     "I Moduli\n",
     "\n",
@@ -927,7 +917,7 @@
     "\n",
     "-   Forniscono il modo per estendere Python\n",
     "\n",
-    "### 6.6.1 Come importare moduli"
+    "### Come importare moduli"
    ]
   },
   {
@@ -1078,7 +1068,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.6.2 Come creare moduli\n",
+    "### Come creare moduli\n",
     "\n",
     "Un modulo non è altro che un file Python. Ecco un esempio di modulo che potete salvare in un file chiamato `module1.py`:\n",
     "\n",
@@ -1194,7 +1184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.6.3 Uso di \\_\\_name\\_\\_\n",
+    "### Uso di \\_\\_name\\_\\_\n",
     "\n",
     "Riassumendo,\n",
     "\n",
@@ -1219,7 +1209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Esempio 3\n",
+    "### Esempio\n",
     "\n",
     "Il prossimo esempio mostra un main program nel modulo `vectools.py` che dimostra l'uso delle funzioni definite nel file:\n",
     "\n",
@@ -1281,7 +1271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Esempio 4\n",
+    "### Esempio\n",
     "\n",
     "Anche se un programma Python non è concepito per essere usato come un modulo, è buona abitudine (e di uso comune) scrivere il programma principale all'interno della condizione `if __name__ == \"__main__\"`:\n",
     "\n",
@@ -1344,8 +1334,7 @@
     "tags": []
    },
    "source": [
-    "6.7 Eseguire Python al di fuori di un Notebook\n",
-    "-----------------------------------------------\n",
+    "## Eseguire Python al di fuori di un Notebook\n",
     "\n",
     "### Eseguire un comando o uno script dallo shell di Python\n",
     "\n",
