--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -23,7 +23,7 @@
     "<hr>\n",
     "\n",
     "\n",
-    "## 7.1 Introduzione\n",
+    "## Introduzione\n",
     "\n",
     "Il linguaggio Python di base (incluse le librerie standard) fornisce strumenti sufficienti per completare semplici progetti computazionali. Tuttavia, esistono librerie Python dedicate che permettono funzionalità estese che\n",
     "\n",
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.2 Numpy e gli array\n",
+    "## Numpy e gli array\n",
     "\n",
     "La librery NumPy (NUMerical PYthon) fornisce un nuovo tipo di struttura dei dati chiamata `array`s che permette di eseguire in modo efficiente operazioni su vettori e matrici. Fornisce inoltre diverse  operazioni legate all'algebra lineare (come risolvere sistemi di equazioni lineari, calcolo di autovettori e autovalori). Viene tradizionalmente importata come `np`.<BR>\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "Vettori, matrici bidimensionali e matrici con più di due indici sono tutti chiamati “arrays” in NumPy.\n",
     "\n",
-    "### 7.2.1 Vettor1 (1d-arrays)\n",
+    "### Vettori (1d-arrays)\n",
     "\n",
     "La struttura dati data che useremo più spesso è il vettore. Qualche esempio di come crearne uno:\n",
     "\n",
@@ -67,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "x = np.array([0, 0.5, 1, 1.5])\n",
@@ -254,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.2 Operazioni su array\n",
+    "### Operazioni su array\n",
     "\n",
     "- Una volta che l'array esiste, possiamo definire e recuperare il valore degli elementi utilizzando gli indici. Per esempio:"
    ]
@@ -967,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.3 Convertire da  array a lista o tuple\n",
+    "### Convertire da  array a lista o tuple\n",
     "\n",
     "Per convertire un array in una lista o una si possono usare le funzioni python standard <span>`list(s0)`</span> e <span>`tuple(s0)`</span> che accettano una sequenza <span>`s0`</span> come input e ritornano rispettivamente  una lista e una ntupla:"
    ]
@@ -1032,7 +1040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.4  %timeit per valutare il tempo di esecuzione di un comando\n",
+    "###  %timeit per valutare il tempo di esecuzione di un comando\n",
     "È spesso utile misurare il tempo necessario per eseguire dei comandi. Jupyter fornisce la funzione %timeit che possiamo utilizzare per mostrare la maggiore velocità delle operazioni di Numpy su array rispetto alle operazioni di math su liste."
    ]
   },
@@ -1070,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  7.2.5 Matrici (2d-arrays)\n",
+    "### Matrici (2d-arrays)\n",
     "\n",
     "Esistono diversi modi per creare un array a due (o più) dimensioni:\n",
     "\n",
@@ -1327,7 +1335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.6 Operazioni standard in Algebra Lineare\n",
+    "### Operazioni standard in Algebra Lineare\n",
     "\n",
     "#### Vettori\n",
     "\n",
@@ -1766,7 +1774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.7 Come vettorializzare una funzione\n",
+    "### Come vettorializzare una funzione\n",
     "\n",
     "Per avere programmi veloci è necessario evitare di ciclare sugli elementi di vettori e matrici usando invece algoritmi vettorializzati. Il primo passo per convertire un algoritmo scalare in un algoritmo vettorializzato è costruire delle funzioni che accettino input vettoriali.\n",
     "<BR>\n",
@@ -1852,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,9 +1871,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : [ 1  2 22]\n",
+      "b : [ 1  2 22]\n"
+     ]
+    }
+   ],
    "source": [
     "print('a :', a)\n",
     "print('b :', b)"
@@ -1880,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,9 +1908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : [ 1  2 22]\n",
+      "b : [ 1  2 22]\n"
+     ]
+    }
+   ],
    "source": [
     "print('a :', a)\n",
     "print('b :', b)"
@@ -1932,7 +1958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.8 Array multidimensionali\n",
+    "### Array multidimensionali\n",
     "Le funzioni di numpy possono operare su array multidimensionali. È quindi necessario poter controllare come la funzione agisce sull'array. Un caso tipico è far operare la funzione lungo un singolo asse (axis) dell'array. Un semplice esempio usando la funzione `sum`."
    ]
   },
@@ -1967,7 +1993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.9 Come importare dentro degli array i dati contenuti in un file di testo\n",
+    "### Come importare dentro degli array i dati contenuti in un file di testo\n",
     "\n",
     "Quando si debba trattare una grande massa di dati è essenziale poterli importare ed esportare su file in modo veloce.\n",
     " \n",
@@ -2102,7 +2128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.10 Come esportare degli array in un file di testo\n",
+    "### Come esportare degli array in un file di testo\n",
     "\n",
     "Per esportare dati in un file numpy fornisce la funzione `savetxt`.\n",
     "Un esempio usando gli array importati in precedenza:"
@@ -2229,9 +2255,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ulteriori esempi per numpy …\n",
-    "\n",
-    "…si possono trovare in: <https://scipy.github.io/old-wiki/pages/Numpy_Example_List.html>"
+    "##### Ulteriori esempi per numpy\n",
+    "Si possono trovare in: <https://scipy.github.io/old-wiki/pages/Numpy_Example_List.html>"
    ]
   },
   {
@@ -2285,6 +2310,13 @@
     "- Differenza tra la copia di riferimenti di array (copia shallow) e la creazione di copie indipendenti (copia deep). Uso di `copy.deepcopy`.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
