--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "<hr>\n",
     "\n",
-    "## 8.1 Nozioni fondamentali\n",
+    "## Nozioni fondamentali\n",
     "Potete trovare una eccellente introduzione a Matplotlib nella Sezione 5 di<br/> \n",
     "[Robert Johanson - Scientific Computing with Python](http://raw.github.com/jrjohansson/scientific-python-lectures/master/Scientific-Computing-with-Python.pdf)<br/>\n",
     "Johanson utilizza lo stesso approccio \"object oriented\" che viene adottato in queste lezioni."
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.2 Grafico di una lista di  numeri. Plot e Scatterplots\n",
+    "## Grafico di una lista di  numeri. Plot e Scatterplots\n",
     "Ciascuna curva nel grafico si genera con una chiamata al metodo `plot` applicato all'oggetto di tipo `AxesSubplot` restituito da `subplots`. Per disegnare set di punti si usa il metodo `scatter`. Sia `plot` che `scatter` richiedono un set di punti le cui coordinate `(x,y)` vengono passate in due `nd.array` oppure due `liste`. La prima lista contiene le coordinate `x`, la seconda le coordinate `y`. "
    ]
   },
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.3 Titoli, Nomi degli assi, Colori, LineStyle\n",
+    "## Titoli, Nomi degli assi, Colori, LineStyle\n",
     "\n",
     "&Egrave; possibile marcare i punti utlizzati in `plot` e `scatter` con un simbolo.\n",
     "`marker` determina il tipo simbolo usato ('o' corrisponde a pallini). `c` oppure `color` determina il colore del simbolo: 'b' significa blue (red: 'r', green: 'g', nero: '0', ). Nel caso di curve, `linestyle` determina il tipo di linea: per esempio `solid`, `dashed`, `dotted`, `dashdot`. Nelle chiamate a `plot` di default non ci sono marker e i punti sono uniti da linee.<BR>\n",
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.4 Fare il grafico di una funzione nota `f(x)`\n",
+    "## Fare il grafico di una funzione nota `f(x)`\n",
     "\n",
     "Il modo più semplice per fare il grafico di una funzione `f(x)`è:\n",
     "\n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.5 Plot multipli\n",
+    "## Plot multipli\n",
     "\n",
     "### Curve multiple in un singolo plot\n",
     "\n",
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.6 Salvare una figura in un file\n",
+    "## Salvare una figura in un file\n",
     "\n",
     "L'estensione del file determina il formato in cui viene salvata la figura"
    ]
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.7 Plot logaritmici\n",
+    "## Plot logaritmici\n",
     "\n",
     "Per avere una scala logaritmica sull'asse `x`, `y` si usano i metodi `set_xscale('log')`, `set_yscale('log')` sugli oggetti di tipo `AxesSubplot`"
    ]
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.8 Istogrammi\n",
+    "## Istogrammi\n",
     "\n",
     "I dati sono raggruppati in bin (contenitori, bidoni). L'altezza di ciascun bin corrisponde al numero di dati che cadono fra i due valori della variabile che definiscono la base del bin. Cambiando il numero di bin e/o i loro estremi si cambia il plot."
    ]
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.9 Altri elementi dei plot"
+    "## Altri elementi dei plot"
    ]
   },
   {
@@ -645,16 +645,9 @@
    "source": [
     "### Legende\n",
     "\n",
-    "Basato su https://realpython.com/python-matplotlib-guide/<BR>\n",
-    "\n",
     "La legenda per ciascuna curva viene passata con il parametro `label` nella chiamata a `plot`. Le curve prive di `label` non vengono incluse nella legenda.\n",
     "    Se nessuna delle curve ha un `label` si ha un errore."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -824,7 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.10 Plot parametrici\n",
+    "## Plot parametrici\n",
     "\n",
     "Spesso per descrivere una curva esprimiamo le coordinate `y` dei punti sulla curva in funzione delle loro coordinate `x`. Per esempio una semicirconferenza centrata nell'origine è descritta dalla relazione $ y(x) = \\sqrt{r^2 - x^2}$, dove $r$ è il raggio.<BR>\n",
     "Un modo alternativo di costruire i punti sul cerchio di raggio $r$ è di notare che possiamo usare come parametro o coordinata l'angolo del punto rispetto all'asse $\\hat{x}$ come:\n",
@@ -913,8 +906,7 @@
    "source": [
     "E per concludere:\n",
     "\n",
-    "Problema:\n",
-    "---------\n",
+    "## Problema:\n",
     "\n",
     "Studiare la funzione $g(x)\\, = \\, \\cos \\left( \\frac{x^4 - 5 x^3 - 3 x^2 + 17 x - 10}{x^4 + 2 x^2 + 1} \\right)$"
    ]
