--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -17,7 +17,7 @@
     "<hr>\n",
     "\n",
     "        \n",
-    "## 9.1 Nozioni fondamentali\n",
+    "## Nozioni fondamentali\n",
     "La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perchè\n",
     "la rappresentazione grafica dei dati è uno strumento estremamente utile.\n",
     "\n",
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9.2 Istogramma delle frequenze\n",
+    "## Istogramma delle frequenze\n",
     "\n",
     "L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati"
    ]
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9.3 Numeri Casuali\n",
+    "## Numeri Casuali\n",
     "\n",
     "La generazione di numeri casuali secondo una distribuzione data ha numerose importanti applicazioni.\n",
     "Il notebook [11_MetodoMontecarlo](./11_MetodoMontecarlo.ipynb) fornisce una discussione pi&ugrave; approfondita e diversi esempi.<BR>\n",
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9.3.1 Alcuni esempi con distribuzioni di uso frequente:"
+    "### Alcuni esempi con distribuzioni di uso frequente:"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9.4 Distribuzioni di probabilità\n",
+    "## Distribuzioni di probabilità\n",
     "\n",
     "Il modulo `scipy.stats` contiene le principali distribuzioni di probabilit&agrave;, sia discrete che continue, funzioni che permettono di calcolare i parametri statistici pi&ugrave; comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o pi&ugrave; set di dati.<BR>\n",
     "Per ulteriori informazioni https://docs.scipy.org/doc/scipy/reference/stats.html."
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9.4.1 Distribuzione normale: $\\,\\,N(x) = \\frac{\\exp (-x^2/2)}{\\sqrt{2\\,\\pi}}$"
+    "### Distribuzione normale: $\\,\\,N(x) = \\frac{\\exp (-x^2/2)}{\\sqrt{2\\,\\pi}}$"
    ]
   },
   {
@@ -730,7 +730,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Grafico della distribuzione cumulativa (cdf):  $\\,\\,C(x) = \\int_{-\\infty}^x N(y)\\, dy$"
+    "#### Grafico della distribuzione cumulativa (cdf)\n",
+    "\n",
+    "La distribuzione cumulativa $C(x)$ di una distribuzione di probabilit&agrave; $N(x)$ &egrave; definita come\n",
+    "$\\,\\,C(x) = \\int_{-\\infty}^x N(y)\\, dy$"
    ]
   },
   {
@@ -756,7 +759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9.4.1 Distribuzione di Poisson: $f(k) = \\exp(-\\mu)\\, \\frac{\\mu^k}{k!}$"
+    "### Distribuzione di Poisson: $f(k) = \\exp(-\\mu)\\, \\frac{\\mu^k}{k!}$"
    ]
   },
   {
