--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -21,7 +21,7 @@
     "<hr>\n",
     "\n",
     "        \n",
-    "## 10.1 Nozioni fondamentali\n",
+    "## Nozioni fondamentali\n",
     "\n",
     "La libreria scipy (SCIentific PYthon) fornisce un gran numero di algoritmi numerici. In questo notebook vengono presentati quelli di uso pi&ugrave; comune che servono a calcolare integrali, trovare zeri, massimi e minimi di funzioni, risolvere equazioni differenziali e interpolare dati.<BR>\n",
     "`scipy` &egrave; basata su `numpy`. Nella [documentazione di scipy](https://docs.scipy.org/doc/scipy/reference/tutorial/general.html) viene raccomandato di importare le due librerie separatamente."
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.2 Integrazione numerica\n",
+    "## Integrazione numerica\n",
     "\n",
     "<div style= \"padding:20px 20px 0px 50px;\">\n",
     "    <img src=\"../Images/integral_comic_strip.png\" width=\"900\"/>\n",
@@ -611,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.3 Risolvere  equazioni  differenziali ordinarie\n",
+    "## Risolvere  equazioni  differenziali ordinarie\n",
     "\n",
     "<div style= 'padding:20px 20px 20px 50px;'>\n",
     "    <img src=\"../Images/FE_comic_strip.png\" width=\"900\"/>\n",
@@ -963,7 +963,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 10.4 Ricerca delle radici\n",
+    "## Ricerca delle radici\n",
     "\n",
     "Cercare una $x$ tale che $f(x)=0$\n",
     "si chiama *ricerca delle radici* di $f$. Si noti che un problema del tipo $g(x)=h(x)$ pu&ograve; essere riformulato come $f(x)=g(x)−h(x)=0$.\n",
@@ -1100,7 +1100,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.5 Fit di un set di dati\n",
+    "## Ottimizzazione ovvero trovare minimi (e massimi)\n",
+    "\n",
+    "Spesso &egrave; necessario trovare il minimo o il massimo di una particolare funzione *f(x)* dove *f* &egrave; una funzione scalare mentre *x* pu&ograve; essere un vettore. Applicazioni tipiche sono la minimizzazione di quantit&agrave; come il costo, il rischio o l'errore, oppure la massimizzazione della produttivit&agrave;, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare *f(x)* è sufficiente minimizzare *g(x)= − f(x)*.\n",
+    "\n",
+    "Di seguito, un esempio che mostra (i) la definizione della funzione *f(x)* da minimizzare e (ii) la chiamata a `scipy.optimize.fmin` a cui vengono passati la funzione *f* da minimizzare e un valore iniziale *x*<sub>0</sub> da cui partire per la ricerca del minimo, e che restituisce il valore *x* per cui *f(x)* ha un minimo locale. Tipicamente, la ricerca del minimo &egrave; locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova. \n",
+    "Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi pi&ugrave; a destra possono essere cercati partendo dai due punti *x*<sub>0</sub> = 1.0 e *x*<sub>0</sub> = 2.0. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import fmin\n",
+    "\n",
+    "def f(x):\n",
+    "    return np.cos(x) - 3 * np.exp(-(x - 0.2) ** 2)\n",
+    "\n",
+    "\n",
+    "# plot function\n",
+    "x = np.arange(-10, 10, 0.1)\n",
+    "y = f(x)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "ax.set_xlabel('x')\n",
+    "ax.grid(visible=True, which='both')\n",
+    "ax.set_xlim(-5., 5.)\n",
+    "ax.set_ylim(-2.2, 0.5)\n",
+    "\n",
+    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Troviamo i due minimi con due chiamate a `fmin`. Il risultato mostra come, in generale, partendo da punti diversi troviamo minimi diversi. &Egrave; anche possibile che esistano punti iniziali che non portano a nessun minimo. Rigeneriamo il plot della funzione, mostrando i punti iniziali delle due ricerche e i minimi ottenuti:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find minima of f(x), starting from 1.0 and 2.0 respectively\n",
+    "minimum1 = fmin(f, 1.0)\n",
+    "print(\"Start search at x=1., minimum is\", minimum1)\n",
+    "minimum2 = fmin(f, 2.0)\n",
+    "print(\"Start search at x=2., minimum is\", minimum2)\n",
+    "\n",
+    "# plot function again showing the minima that have been found\n",
+    "x = np.arange(-10, 10, 0.1)\n",
+    "y = f(x)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "ax.set_xlabel('x')\n",
+    "ax.grid(visible=True, which='both')\n",
+    "ax.set_xlim(-5.,5.)\n",
+    "ax.set_ylim(-2.2,0.5)\n",
+    "\n",
+    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')\n",
+    "# add minimum1 to plot\n",
+    "ax.scatter(minimum1, f(minimum1), marker='v', c='r', label='minimum 1')\n",
+    "# add start1 to plot\n",
+    "ax.scatter(1.0, f(1.0), marker='o', c='r', label='start 1')\n",
+    "\n",
+    "# add minimum2 to plot\n",
+    "ax.scatter(minimum2, f(minimum2), marker='v', c='g', label='minimum 2')\n",
+    "# add start2 to plot\n",
+    "ax.scatter(2.0, f(2.0), marker='o', c='g', label='start 2')\n",
+    "\n",
+    "ax.legend(loc='lower left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Come si vede, la chiamata a `fmin` produce anche dell'output addizionale che pu&ograve; essere utile per analizzare la procedura.\n",
+    "\n",
+    "##### Valori ritornati da `fmin`\n",
+    "\n",
+    "Si noti che la funzione `fmin` restituisce un numpy `array` che – nel caso precedente – contiene un solo numero dal momento che abbiamo una sola variabile (qui *x*) da variare. In generale, `fmin` pu&ograve; essre usata per trovare il minimo in uno spazio pluridimensionale. In questo caso, il numpy array contiene le coordinate del punto che minimizza la funzione obiettivo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
+    "    <h4> Imparare Facendo</h4>\n",
+    "    \n",
+    "<OL>\n",
+    "<LI>Trovate massimi e minimi della funzione $f(x) = 2\\, x^3 + 3\\, x^2 - 12\\, x - 10$.</LI>\n",
+    "<LI>Trovate la distanza minima fra il punto del piano (3,2) e la retta y = 3x -1.</LI>\n",
+    "<LI>Trovate il rettangolo di area massima con perimetro uguale a 100 $m$.</LI>\n",
+    "</OL>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nota\n",
+    "I manuali delle versioni pi&ugrave; recenti di `scipy` consigliano di utilizzare la funzione `scipy.optimize.minimize_scalar` per la ricerca dei minimi di funzioni scalari e `scipy.optimize.minimize` nel caso di funzioni vettoriali. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit di un set di dati\n",
     "\n",
     "Scipy fornisce una funzione piuttosto flessibile (basato sull'algoritmo di Levenburg-Marquardt), `scipy.optimize.curve_fit`, per interpolare un set di dati. L'assunzione &egrave; che vengano dati un set di punti\n",
     "$x_1, x_2,\\cdots,x_N$, i corrispondenti valori $y_i$ e una dipendenza funzionale $y=f(x,\\vec{p})$.\n",
@@ -1229,126 +1347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.6 Ottimizzazione ovvero trovare minimi (e massimi)\n",
-    "\n",
-    "Spesso &egrave; necessario trovare il minimo o il massimo di una particolare funzione *f(x)* dove *f* &egrave; una funzione scalare mentre *x* pu&ograve; essere un vettore. Applicazioni tipiche sono la minimizzazione di quantit&agrave; come il costo, il rischio o l'errore, oppure la massimizzazione della produttivit&agrave;, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare *f(x)* è sufficiente minimizzare *g(x)= − f(x)*.\n",
-    "\n",
-    "Di seguito, un esempio che mostra (i) la definizione della funzione *f(x)* da minimizzare e (ii) la chiamata a `scipy.optimize.fmin` a cui vengono passati la funzione *f* da minimizzare e un valore iniziale *x*<sub>0</sub> da cui partire per la ricerca del minimo, e che restituisce il valore *x* per cui *f(x)* ha un minimo locale. Tipicamente, la ricerca del minimo &egrave; locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova. \n",
-    "Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi pi&ugrave; a destra possono essere cercati partendo dai due punti *x*<sub>0</sub> = 1.0 e *x*<sub>0</sub> = 2.0. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import fmin\n",
-    "\n",
-    "def f(x):\n",
-    "    return np.cos(x) - 3 * np.exp(-(x - 0.2) ** 2)\n",
-    "\n",
-    "\n",
-    "# plot function\n",
-    "x = np.arange(-10, 10, 0.1)\n",
-    "y = f(x)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(6, 4))\n",
-    "ax.set_xlabel('x')\n",
-    "ax.grid(visible=True, which='both')\n",
-    "ax.set_xlim(-5., 5.)\n",
-    "ax.set_ylim(-2.2, 0.5)\n",
-    "\n",
-    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Troviamo i due minimi con due chiamate a `fmin`. Il risultato mostra come, in generale, partendo da punti diversi troviamo minimi diversi. &Egrave; anche possibile che esistano punti iniziali che non portano a nessun minimo. Rigeneriamo il plot della funzione, mostrando i punti iniziali delle due ricerche e i minimi ottenuti:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find minima of f(x), starting from 1.0 and 2.0 respectively\n",
-    "minimum1 = fmin(f, 1.0)\n",
-    "print(\"Start search at x=1., minimum is\", minimum1)\n",
-    "minimum2 = fmin(f, 2.0)\n",
-    "print(\"Start search at x=2., minimum is\", minimum2)\n",
-    "\n",
-    "# plot function again showing the minima that have been found\n",
-    "x = np.arange(-10, 10, 0.1)\n",
-    "y = f(x)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(6, 4))\n",
-    "ax.set_xlabel('x')\n",
-    "ax.grid(visible=True, which='both')\n",
-    "ax.set_xlim(-5.,5.)\n",
-    "ax.set_ylim(-2.2,0.5)\n",
-    "\n",
-    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')\n",
-    "# add minimum1 to plot\n",
-    "ax.scatter(minimum1, f(minimum1), marker='v', c='r', label='minimum 1')\n",
-    "# add start1 to plot\n",
-    "ax.scatter(1.0, f(1.0), marker='o', c='r', label='start 1')\n",
-    "\n",
-    "# add minimum2 to plot\n",
-    "ax.scatter(minimum2, f(minimum2), marker='v', c='g', label='minimum 2')\n",
-    "# add start2 to plot\n",
-    "ax.scatter(2.0, f(2.0), marker='o', c='g', label='start 2')\n",
-    "\n",
-    "ax.legend(loc='lower left')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Come si vede, la chiamata a `fmin` produce anche dell'output addizionale che pu&ograve; essere utile per analizzare la procedura.\n",
-    "\n",
-    "##### Valori ritornati da `fmin`\n",
-    "\n",
-    "Si noti che la funzione `fmin` restituisce un numpy `array` che – nel caso precedente – contiene un solo numero dal momento che abbiamo una sola variabile (qui *x*) da variare. In generale, `fmin` pu&ograve; essre usata per trovare il minimo in uno spazio pluridimensionale. In questo caso, il numpy array contiene le coordinate del punto che minimizza la funzione obiettivo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
-    "    <h4> Imparare Facendo</h4>\n",
-    "    \n",
-    "<OL>\n",
-    "<LI>Trovate massimi e minimi della funzione $f(x) = 2\\, x^3 + 3\\, x^2 - 12\\, x - 10$.</LI>\n",
-    "<LI>Trovate la distanza minima fra il punto del piano (3,2) e la retta y = 3x -1.</LI>\n",
-    "<LI>Trovate il rettangolo di area massima con perimetro uguale a 100 $m$.</LI>\n",
-    "</OL>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Nota\n",
-    "I manuali delle versioni pi&ugrave; recenti di `scipy` consigliano di utilizzare la funzione `scipy.optimize.minimize_scalar` per la ricerca dei minimi di funzioni scalari e `scipy.optimize.minimize` nel caso di funzioni vettoriali. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Altri metodi numerici\n",
-    "-----------------------\n",
+    "## Altri metodi numerici\n",
     "\n",
     "Scientific Python and Numpy forniscono molti altri algoritmi numerici: per esempio interpolazione di funzioni, trasformate di Fourier, funzioni speciali (Funzioni di Bessel etc.), signal processing e filtri."
    ]
@@ -1387,12 +1386,10 @@
     "\n",
     "\n",
     "## Risoluzione di Equazioni Differenziali Ordinarie (ODE)\n",
-    "\n",
     "Le equazioni differenziali ordinarie (ODE) di ordine `n` possono essere riscritte come un sistema di equazioni differenziali di primo ordine. La libreria `scipy` fornisce una funzione chiamata `odeint` per risolvere queste equazioni.\n",
     "\n",
     "\n",
     "## Ricerca delle radici\n",
-    "\n",
     "Sono disponibili diversi metodi per la ricerca delle radici di una funzione nel modulo `scipy.optimize`.\n",
     "\n",
     "#### Metodo di Bisezione\n",
@@ -1401,14 +1398,11 @@
     "#### Metodo `fsolve`\n",
     "Un metodo alternativo, spesso pi&ugrave; efficiente, &egrave; `fsolve`. Richiede solo un punto di partenza vicino alla radice attesa e funziona anche con problemi multi-dimensionali.\n",
     "\n",
-    "## Fit di un set di dati\n",
-    "\n",
-    "SciPy fornisce la funzione `curve_fit` per effettuare il fit di un set di dati basato su un modello ipotizzato. Questo approccio minimizza la somma degli scarti quadratici tra i dati e la curva. \n",
-    "\n",
-    "\n",
     "## Ottimizzazione: trovare massimi e minimi\n",
+    "La routine `scipy.optimize.fmin` permette di minimizzare una funzione `f(x)`. Per massimizzare una funzione, è sufficiente minimizzare `-f(x)`. \n",
     "\n",
-    "La routine `scipy.optimize.fmin` permette di minimizzare una funzione `f(x)`. Per massimizzare una funzione, è sufficiente minimizzare `-f(x)`. \n"
+    "## Fit di un set di dati\n",
+    "SciPy fornisce la funzione `curve_fit` per effettuare il fit di un set di dati basato su un modello ipotizzato. Questo approccio minimizza la somma degli scarti quadratici tra i dati e la curva. \n"
    ]
   },
   {
