--- a/ipynb/11_MetodoMontecarlo.ipynb
+++ b/ipynb/11_MetodoMontecarlo.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "<H1 style=\"font-size:50px\">11: Metodo Monte Carlo</H1>\n",
     "\n",
-    "Introduzione\n",
-    "------------\n",
+    "## Introduzione\n",
+    "\n",
     "Il termine Metodo Monte Carlo si riferisce a un insieme di tecniche di calcolo e simulazione che si basano sull'uso di numeri casuali."
    ]
   },
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.1 Integrazione numerica con metodo MC\n",
+    "## Integrazione numerica con metodo MC\n",
     "\n",
     "L'idea di usare numeri casuali per calcolare un integrale numerico si basa sul teorema della media in Analisi che afferma che l'integrale  $\\int_a^b f(x)\\,dx$ è uguale al prodotto della lunghezza (con segno) dell'intervallo di integrazione $(b-a)$ per il valor medio della funzione $f$, $<f>$, nell'intervallo. Il valor medio pu&ograve; essere calcolato\n",
     "facendo la media dei valori di $f$ in un set di punti scelti a caso in $[a,b]$.<BR>\n",
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.2 Generazione di eventi distribuiti secondo una densit&agrave; di probabilit&agrave; fissata\n",
+    "## Generazione di eventi distribuiti secondo una densit&agrave; di probabilit&agrave; fissata\n",
     "\n",
     "### Metodo hit and miss\n",
     "\n",
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.3 Propagazione dell'errore con metodo MC"
+    "## Propagazione dell'errore con metodo MC"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.4 Simulazione di eventi complessi con metodo MC"
+    "## Simulazione di eventi complessi con metodo MC"
    ]
   },
   {
