--- a/ipynb/12_calcolo_simbolico.ipynb
+++ b/ipynb/12_calcolo_simbolico.ipynb
@@ -7,7 +7,7 @@
     "<H1 style=\"font-size:50px\">12: Calcolo simbolico (SimPy)</H1>\n",
     "\n",
     "\n",
-    "## 12.1 Introduzione\n",
+    "## Introduzione\n",
     "\n",
     "In questa sezione, introducciamo la libreria SymPy (SYMbolic Python). Mentre nei calcoli numerici si opera su numeri,  nel calcolo simbolico lavoriamo su variabili generiche.\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.2 Symbol/symbols\n",
+    "## Symbol/symbols\n",
     "\n",
     "Prima di eseguire qualunque operazione simbolica, è necessario creare le variabili simboliche usando la funzione di SymPy `Symbol`. Le variabili simboliche vengono associate a delle variabili ordinarie per caricarle in memoria. Pur non essendo obbligatorio, in genere il\n",
     "nome della variabile e quella del simbolo coincidono."
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.3 Tipi numerici\n",
+    "## Tipi numerici\n",
     "\n",
     "SymPy ha due tipi numerici proprii: `Rational` e `RealNumber`. La classe  Rational rappresenta un numero razionale come una coppia di interi: il numeratore e il denominatore, quindi `Rational(1,2)` rappresenta `1/2`, `Rational(5,3)` rappresenta `5/3` e così via."
    ]
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.4 Derivazione e integrazione\n",
+    "## Derivazione e integrazione\n",
     "\n",
     "SymPy può eseguire derivate ed integrali di molte funzioni in modo simbolico :"
    ]
@@ -643,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.5 Equazioni  differenziali ordinarie (ODE)\n",
+    "## Equazioni  differenziali ordinarie (ODE)\n",
     "\n",
     "SymPy può risolvere diversi tipi di equazioni  differenziali ordinarie con il comando `dsolve`. L'equazione viene passata come primo argomento, `eq`. Il secondo argomento è la funzione `f(x)` rispetto a cui risolvere l'equazione. Un terzo argomento opzionale, `hint`, influenza il metodo che `dsolve` usa: alcuni metodi sono più adatti a certe classi di ODE, o esprimono la soluzione in forma più semplice, che altri.\n",
     "\n",
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.6 Sviluppi in serie\n",
+    "## Sviluppi in serie\n",
     "\n",
     "Molte espressioni di SymPy possono essere sviluppate in serie di Taylor usando il metodo `series`. Sono richiesti almeno l'espressione da sviluppare e la variabile rispetto alla quale fare lo sviluppo. È possibile specificare, opzionalmente, il punto attorno al quale sviluppare, il numero massimo di termini e la direzione dello sviluppo (per maggiori informazioni consultate `help(Basic.series)`)."
    ]
@@ -937,7 +937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.7 Equazioni lineari e  inversione di matrici \n",
+    "## Equazioni lineari e  inversione di matrici \n",
     "\n",
     "SymPy contiene una classe `Matrix` e le funzioni associate che permettono di risolvere simbolicamente un sistems di  equazioni lineari (In seguito, ovviamente, possiamo ottenere risultati numerici con `subs()` e `evalf()`). Consideriamo il caso seguente di una semplice coppia di equazioni lineari:\n",
     "\n",
@@ -1109,7 +1109,7 @@
    "source": [
     "Per ulteriori informazioni, si veda `help(solve)` e `help(solve_linear_system)`.\n",
     "\n",
-    "## 11.8 Equazioni non lineari \n",
+    "## Equazioni non lineari \n",
     "\n",
     "Risolviamo una semplice equazione come\n",
     "$x = x^2$. Ci sono due soluzioni ovvie: *x* = 0 and *x* = 1. Come possiamo farle trovare a Sympy?"
@@ -1164,7 +1164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.9 Usare espressioni di sympy in numpy"
+    "## Usare espressioni di sympy in numpy"
    ]
   },
   {
@@ -1248,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.10 Output: l'interfaccia a LaTeX\n",
+    "## Output: l'interfaccia a LaTeX\n",
     "\n",
     "SymPy ha la possibilità di formattare il suo output in LaTeX, in modo che sia facile inserirlo in altri documenti. LaTeX è lo standard per tutte le pubblicazioni che contengano formule di matematica o fisica. Non vi laureerete senza impararlo perchè la tesi la dovrete scrivere in LaTeX.\n",
     "\n",
