--- a/ipynb/13_Classi.ipynb
+++ b/ipynb/13_Classi.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Object Oriented Programming (OOP) e Classi in Python\n",
-    "===================================================\n",
+    "<H1 style=\"font-size:50px\">13: Object Oriented Programming (OOP) e Classi in Python</H1>\n",
     "\n",
-    "Introduzione\n",
-    "------------\n",
+    "## Introduzione\n",
+    "\n",
     "Questo notebook si basa sulle lezioni 8 e 9 di:\n",
     "https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/\n",
     "\n",
@@ -55,7 +54,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    \n",
     "## Creare una classe"
    ]
   },
@@ -136,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Come usare i metodi di una classe"
+    "### Come usare i metodi di una classe"
    ]
   },
   {
@@ -211,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stampare un esemplare di una classe e metodo `__str__`"
+    "### Stampare un esemplare di una classe e metodo `__str__`"
    ]
   },
   {
@@ -567,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Accedere e modificare i dati di un esemplare: getters and setters\n",
+    "### Accedere e modificare i dati di un esemplare: getters and setters\n",
     "\n",
     "Abbiamo visto che se nell\\' `__init__` di una classe `C` &egrave; definito l'attributo `x` è possibile accedere al valore dell'attributo per un esemplare `es` con la notazione `es.x`.<BR>\n",
     "&Egrave; per&ograve; preferibile e fortemente incoraggiato accedere e modificare, dall'esterno della classe, gli attributi di un esemplare attraverso metodi appositi, detti getters e setters, che devono essere definiti all'interno della classe."
