--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -18,14 +18,14 @@
     "\n",
     "In questa sezione descriviamo come specificare il formato con cui stampare le informazioni sia sullo shermo che in un file.\n",
     "\n",
-    "## 5.1 Stampare sullo standard output (normalmente lo schermo)\n",
+    "## Stampare sullo standard output (normalmente lo schermo)\n",
     "\n",
     "\n",
     "La funzione `print` è il comando utilizzato più comunemente per stampare informazioni sullo “standard output device” che normalmente è lo schermo.\n",
     "\n",
     "Ci sono due modi per usare print.\n",
     "\n",
-    "###  5.1.1 print semplice\n",
+    "### `print` semplice\n",
     "\n",
     "Il modo più facile di usare il comando `print` è passargli l'elenco delle variabili da stampare separate da un virgola. Qualche esempio:"
    ]
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1.2 f-strings: il metodo più semplice e recente di specificare il format\n",
+    "### f-strings: il metodo più semplice e moderno di specificare il format\n",
     "\n",
     "È sufficiente mettere il simbolo `f`, da cui il nome f-strings, di fronte al delimitatore iniziale della stringa e poi, all'interno della stringa stessa specificare variabile e formato fra parentesi graffe. "
    ]
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1.3 Il metodo `format`\n",
+    "### Il metodo `format`\n",
     "\n",
     "Spesso si trovano esempi di una notazione pi&ugrave; datata per specificare il formato di scrittura di una stringa che utilizza il metodo `format`. La specificazione del formato &egrave; quella gi&agrave; vista nel caso delle `f-string`. Mentre le istruzioni di formattazione sono all'interno della stringa da stampare, racchiuse da parentesi graffe,\n",
     "i corrispondenti dati sono passati attraverso il metodo `format`.\n",
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Leggere e scrivere files\n",
+    "## Leggere e scrivere files\n",
     "\n",
     "Ecco un programmma che\n",
     "\n",
